--- a/homework/HW2.rmd
+++ b/homework/HW2.rmd
@@ -8,10 +8,9 @@ output: pdf_document
 
 ```{r, echo = F}
 library(knitr)
-opts_chunk$set(tidy.opts = list(width.cutoff = 60), tidy = TRUE)
+opts_chunk$set(tidy.opts = list(width.cutoff = 60),
+               tidy = TRUE)
 ```
-
-# Problem 1
 
 # Problem 2
 
@@ -28,6 +27,7 @@ plot(winnebago, xlab = expression("Time"), ylab = expression("Sales"), main = ex
 ```
 
 Interpretation:
+
 - The time series shows an overall upwards trend between the years 1967 and 1972.
 - Between the years 1970 and 1972 the increase is at its highest.
 
@@ -40,20 +40,25 @@ summary(model1)
 ```
 
 - We expect the wages to increase by $200.74 per year
-- $69.15%$ of the variance can be explained by the predictor variables
+- $69.15\%$ of the variance can be explained by the predictor variables
 - the linear trend is significant because the p-value $2.2 \cdot 10^{-16}$ is smaller than $10^{-12}$
 
+```{r}
+plot(winnebago, xlab = expression("Time"), ylab = expression("Sales"), main = expression("Time Series Plot of Winnebago with a least squares regression fit"))
+abline(model1, col = 'red')
+```
 
 ```{r}
-res <- as.ts(rstandard(model1))
-plot(res, xlab = expression("Time"), ylab = expression("Residuals"), main = "Plot of Residuals versus Time")
-abline(h = 0)
+res1 <- as.ts(rstandard(model1))
+plot(res1, xlab = expression("Time"), ylab = expression("Residuals"), main = "Plot of Residuals versus Time")
+abline(h = 0, col = 'red')
 ```
 
 Interpretation:
+
 - The residuals plot shows somewhat random movement around zero.
 - More uneven spread between ca. 35 to 65 in comparison to 0 to 35.
-- There may be a “seasonal” cyclical trend.
+- There may be a "seasonal" cyclical trend.
 
 
 ## c)
@@ -64,8 +69,9 @@ plot(ln_winnebago, xlab = expression("Time"), ylab = expression("ln Sales"), mai
 ```
 
 Interpretation:
+
 - The time series plot of the transformed values shows a linear upward trend (which corresponds with the untransformed data)
-- There is one dip around the year 1970
+- There is one downward spike around the year 1970
 - The "seasonal" trend seems more pronounced
 
 
@@ -77,66 +83,117 @@ summary(model2)
 ```
 
 ```{r}
+plot(ln_winnebago, xlab = expression("Time"), ylab = expression("ln Sales"), main = expression("Time Series Plot of Winnebago with a least squares regression fit"))
+abline(model2, col = 'red')
+```
+
+```{r}
 res2 <- as.ts(rstandard(model2))
 plot(res2, xlab = expression("Time"), ylab = expression("Residuals"), main = "ln Plot of Residuals versus Time")
-abline(h = 0)
+abline(h = 0, col = 'red')
 ```
 
 Interpretation:
+
 - the ln-transformed residuals plot shows random movement around 0
 - There seems to be an overall cyclical trend
 
-## e) & f)
+## e)
 
 ```{r}
 months <- season(winnebago)
-model3 <- lm(ln_winnebago~months-1)
+model3 <- lm(ln_winnebago ~ months - 1)
 summary(model3)
 ```
 
-- $98.01%$ of the variance can be explained by the predictor variables
+- $98.01\%$ of the variance can be explained by the predictor variables
 - the linear trend is significant because the p-value $2.2 \cdot 10^{-16}$ is smaller than $10^{-12}$
 
 ```{r}
-plot(rstudent(model3), x = as.vector(time(winnebago)), xlab="Time", ylab="Residuals", main="Standardized Residuals", type="l")
-points(y=rstudent(model3), x=as.vector(time(winnebago)), pch = as.vector(season(winnebago)))
-
+res3 <- as.ts(rstandard(model3))
+plot(res3, x = as.vector(time(winnebago)), xlab = "Time", ylab = "Standardized Residuals", main = "Standardized Residuals", type = "l")
+points(y = rstudent(model3), x = as.vector(time(winnebago)), pch = as.vector(season(winnebago)))
 ```
 
-Interpretation:
+## f)
+
+- looking at the residuals, we can revert our assumption of a seasonal trend
+- we do not see an obvious pattern of the months at the highs and lows
 
 ## g)
 
 ```{r}
-res2 <- as.ts(rstandard(model2))
-plot(res2, xlab=expression("Time"), ylab=expression("Residuals"), main="Plot of Residuals versus Time")
-
+plot(res3, x = as.vector(time(winnebago)), xlab = "Time", ylab = "Standardized Residuals", main = "Standardized Residuals", type = "l")
 ```
+
+- We plotted the exact same graph as in e) because we did not see any difference in the exercise.
 
 ## h)
 
-```{r}
-acf(res2, main="Autocorrelation Plot of Residuals")$acf
+```{r fig.height = 5}
+acf(res1, main = "Autocorrelation Plot of Residuals for res1")
 ```
 
+- significant autocorrelation at lags 1, 2, 3
+- somewhat periodic behaviour starting at lag 7
+- small magnitude with ca. .3
 
-## h) i)
-
-```{r}
-hist(res2, xlab="Residual", main="Histogram of Residuals")
+```{r fig.height = 5}
+acf(res2, main = "Autocorrelation Plot of Residuals for res2")
 ```
 
+- significant autocorrelation at lags 1, 2, 11, 12, 16, 17, 18
+- periodic behaviour
+
+```{r fig.height = 5}
+acf(res3, main = "Autocorrelation Plot of Residuals for res3")
+```
+
+- significant autocorrelation at lags 1 through 12
+- clear downward trend (seems like $e^{-x}$ behaviour) with no indication of seasonal trend
+- big magnitude with about .9
+- only positive values
+
+## i)
 
 ```{r}
-shapiro.test(res2)
+par(mfrow = c(1, 2))
+qqnorm(res1, main = "Normal Probability Plot vs \n Residuals Fit for res1")
+abline(a = 0, b = 1, col = 'red')
+hist(res1, xlab = "Residual", main = "Histogram of Residuals \n for res1")
 ```
-### Exercise 3
+
+- The quantiles of res1 are a little bit off at about -1 and we have one outlier at about 4.
+- Data looks somewhat normally distributed based on the histogram.
+
+```{r}
+par(mfrow = c(1, 2))
+qqnorm(res2, main = "Normal Probability Plot vs \n Residuals Fit for res2")
+abline(a = 0, b = 1, col = 'red')
+hist(res2, xlab = "Residual", main = "Histogram of Residuals \n for res2")
+```
+
+- Again, we have outliers at -3 and 2 but not as bad as in res1.
+- Looking at the histogram, we have normal distributed data if we do not take the values at -2 into account.
+
+```{r}
+par(mfrow = c(1, 2))
+qqnorm(res3, main = "Normal Probability Plot vs \n Residuals Fit for res3")
+abline(a = 0, b = 1, col = 'red')
+hist(res3, xlab = "Residual", main = "Histogram of Residuals \n for res3")
+```
+
+- The quantiles are a bit more off this time but all in all they are also somewhat normally distributed.
+- The histogram shows a nearly normal distribution without the values from -.5 to -1.
+
+### Problem 3
+
 ## c)
 
 ```{r}
-phi <- seq(-1, 1, by = 0.01)
-y <- (1 + phi)/(1-phi)
-plot(phi, y)
+phi <- seq(from = -1, to = 1, by = 0.01)
+y <- (1 + phi) / (1 - phi)
+plot(phi, y, pch = 8)
 ```
 
 The closer $\phi$ is to -1, the closer the variance is to 0, thus the precision increases.
