--- a/problems/set_8.rmd
+++ b/problems/set_8.rmd
@@ -28,7 +28,7 @@ ar2.series <- arima.sim(n = 72, list(ar = phi, sd = 1))
 
 ```{r}
 ar2acf <- ARMAacf(ar = c(0.7, -0.4), lag.max = 10, pacf = FALSE)
-plot(ar2acf, xlab = "Lag", ylab = "Theoretical ACF", main = "Theoretical ACF AR(2)", type = "h")
+plot(ar2acf, xlab = "Lag", ylab = "Theoretical ACF", main = "Theoretical ACF AR(2)", type = "h") # type = 'h' gives the vertical lines
 abline(h = 0)
 ```
 
@@ -37,10 +37,14 @@ abline(h = 0)
 ## Part b
 
 ```{r}
-acf.samp <- acf(ar2.series, main = "AR(2) Sample Autocorrelation")
+acf.samp <- acf(ar2.series, main = "AR(2) Sample Autocorrelation", lag.max = 40)
+acf.samp$acf
 ```
 
 - "cuts off" after lag 1
+- dies out way slower than the theoretical autocorrelation
+- due to short series / small sample size
+- meaning if we take a longer series, e.g. 7200 it dies out way faster
 
 ## Part c
 
@@ -48,10 +52,18 @@ acf.samp <- acf(ar2.series, main = "AR(2) Sample Autocorrelation")
 rho12 <- ar2acf[2:3]
 rho1 <- phi[1] / (1 - phi[2])
 rho2 <- (rho12[2] - rho12[1]^2) / (1 - rho12[1]^2)
+rho1
+rho2
+```
+```{r}
 ar2pacf <- ARMAacf(ar = c(0.7, -0.4), pacf = TRUE)
 plot(ar2pacf, xlab = "Lag", ylab = "Theoretical PACF", main = "Theoretical PACF AR(2)", type = "h")
+abline(h=0)
 ```
 
+- PACF is denoted in the book also as $\phi$ but with to subscripts
+- $\phi_{1,1} = \frac{\phi_1}{1-\phi_2}$
+- $\phi_{2,2} = \frac{\rho_2 - \rho_1^2}{1 - \rho_1^2}$
 - cuts off after lag 2 in theory
 
 ## Part d
@@ -60,8 +72,13 @@ plot(ar2pacf, xlab = "Lag", ylab = "Theoretical PACF", main = "Theoretical PACF 
 samp.pacf <- pacf(ar2.series, main = "AR(2) Sample Partial Autocorrelation")
 ```
 
-- cuts off after lag 2
-- supports AR(2) specification
+- does not cut off after lag 2
+- significant autocorrelation at lag 6
+- does not match theoretical PACF well
+
+```{r}
+eacf(ar2.series)
+```
 
 # Problem 8
 
@@ -69,16 +86,43 @@ samp.pacf <- pacf(ar2.series, main = "AR(2) Sample Partial Autocorrelation")
 theta <- c(-0.7, 0.4)
 ma2 <- arima.sim(n = 36, list(ma = theta, sd = 1))
 ma2acf <- ARMAacf(ma = theta, lag.max = 4, pacf = FALSE)
+ma2acf
+```
+```{r}
 acfs <- acf(ma2, main = "ACF for MA(2)")
+acfs$acf
+```
+
+- matches theoretical ACF really well.
+
+```{r}
 acfma2 <- acfs$acf
+```
+```{r}
 pacfMA2 <- ARMAacf(ma = theta, lag.max = 10, pacf = TRUE)
+pacfMA2
 plot(pacfMA2, xlab = "Lag", ylab = "Theoretical PACF", main = "Theoretical PACF MA(2)", type = "h")
 abline(h = 0)
 ```
+
+- dies out
+
 ```{r}
 pacf.samp <- pacf(ma2, main = "Sample MA(2) PACF")
 pacfs <- pacf.samp$acf
+pacfs
 ```
+
+- match up really well with the theoretical PACF
+
+```{r}
+#eacf(ma2)
+```
+
+### Specification
+
+- fit MA(1), AR(1), ARMA(1,1)
+- see what works best
 
 # Problem 9
 
